#194 improve detection of G1 gc logfiles